[gd_scene load_steps=11 format=2]

[ext_resource path="res://Actors/Player.gd" type="Script" id=1]
[ext_resource path="res://Systems/PlayerController.tscn" type="PackedScene" id=2]
[ext_resource path="res://Resources/PlayerEvents.tres" type="Resource" id=3]
[ext_resource path="res://Resources/UiState.tres" type="Resource" id=4]
[ext_resource path="res://Assets/audio/sfx/beam.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/audio/sfx/reject.ogg" type="AudioStream" id=6]

[sub_resource type="CylinderShape" id=9]
radius = 0.5
height = 1.8

[sub_resource type="CylinderShape" id=10]
radius = 3.0

[sub_resource type="SpatialMaterial" id=11]
flags_unshaded = true
flags_use_point_size = true
params_point_size = 2.0

[sub_resource type="PointMesh" id=12]
material = SubResource( 11 )

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )
player_events = ExtResource( 3 )
ui_state = ExtResource( 4 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.926927, 0 )
omni_range = 3.0

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0 )
shape = SubResource( 9 )

[node name="PlayerController" parent="." instance=ExtResource( 2 )]

[node name="RejectRayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.0679358, 0 )
cast_to = Vector3( 0, -3, 0 )
debug_shape_custom_color = Color( 0.0941176, 0.0431373, 1, 1 )
debug_shape_thickness = 3

[node name="Pivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="MemoryRayCast" type="RayCast" parent="Pivot"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )
collide_with_areas = true
debug_shape_custom_color = Color( 1, 0, 0, 1 )

[node name="Camera" type="Camera" parent="Pivot"]

[node name="BeamRayCast" type="RayCast" parent="Pivot"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
cast_to = Vector3( 0, -18, 0 )

[node name="FirstShadowSpawnPoint" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -8.03591 )

[node name="PickupSpawnLocation" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.54262 )

[node name="FirstGemSpawnLocation" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.756, 0, 7.624 )

[node name="MeleeRange" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="MeleeRange"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.995059, 0 )
shape = SubResource( 10 )

[node name="Listener" type="Listener" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00544, 0 )
current = true

[node name="BeamAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="RejectAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -4.01
bus = "SFX"

[node name="Confetti" type="CPUParticles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.59811, 0 )
emitting = false
amount = 50
lifetime = 8.0
local_coords = false
mesh = SubResource( 12 )
emission_shape = 2
emission_box_extents = Vector3( 10, 1, 10 )
direction = Vector3( 0, -1, 0 )
spread = 21.1
gravity = Vector3( 0, 0, 0 )
initial_velocity = 3.0
angular_velocity = 308.29
angle = 160.0
angle_random = 0.47
scale_amount = 0.1
scale_amount_random = 1.0
color = Color( 0, 1, 0.572549, 1 )
